--- a/styles/style.css
+++ b/styles/style.css
@@ -15,32 +15,30 @@
   align-items: center;
 }
 
-.logo{
-
-}
-
 .logo_place_header{
   position: absolute;
   top: 30px;
   left: 64px;
   z-index: 2;
+  width: 183px;
+  height: 32px;
 }
 
-.header_title{
+.header__title{
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
-  width: 730px;
-  padding-left: 64px;
-  margin: 0;
+  max-width: 730px;
+  margin: 0 0 0 64px;
   z-index: 2;
 }
 
 .header__subtitle{
+  margin: 0;
   position: absolute;
   left: 64px;
   bottom: 30px;
-  width: 388px;
+  max-width: 388px;
   z-index: 2;
   line-height: 25px;
   font-size: 18px;
@@ -56,7 +54,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 756px;
+  width: 765px;
   height: 608px;
   z-index: 1;
 }
@@ -87,7 +85,7 @@
 
 .two-columns__brief{
   margin: 0;
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: 400;
@@ -108,8 +106,7 @@
   font-size: 24px;
   font-weight: 400;
 }
-
-.two-columns__paragraph_place{
+.two-columns__paragraph:nth-of-type(2n){
   padding: 30px 0;
 }
 
@@ -126,9 +123,8 @@
 }
 
 .section-title{
-  width: 60%;
-  margin: 0;
-  padding-bottom: 20px;
+  max-width: 60%;
+  margin: 0 0 20px;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
@@ -136,7 +132,7 @@
 }
 
 .section-subtitle{
-  width: 60%;
+  max-width: 60%;
   margin: 0;
   line-height: 34px;
   font-size: 24px;
@@ -149,6 +145,9 @@
   width: 1100px;
   justify-content: space-between;
   flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
  }
 
 .table__cell{
@@ -165,8 +164,7 @@
  }
 
 .table__text{
-  margin: 0;
-  margin-top: 20px;
+  margin: 20px 0 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: 400;
@@ -175,16 +173,15 @@
 .feynman{
   position: relative;
   display: flex;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   flex-direction: column;
   align-items: center;
  }
 
 .feynman__title{
-  width: 648px;
-  margin: 0;
-  margin-top: 100px;
+  max-width: 648px;
+  margin: 100px 0 70px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -193,7 +190,6 @@
 }
 
 .feynman__subtitle{
-  padding-top: 70px;
   margin: 0;
   z-index: 1;
   line-height: 51px;
@@ -214,11 +210,14 @@
 }
 
 .feynman__image{
+  background-image: url(../images/feynman.png);
+  background-size: cover;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 867px;
   height: 637px;
+  z-index: 0;
 }
 
 .kaufman{
@@ -233,26 +232,28 @@
 }
 
 .section-title_theme_dark{
-  color: white;
+  color: #fff;
   z-index: 1;
 }
 
 .section-subtitle_theme_dark{
-  color: white;
+  color: #fff;
   z-index: 1;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
+  color: #fff;
   margin-right: 0;
   margin-top: 80px;
   z-index: 1;
 }
 
 .kaufman__triangle{
+  background-image:url(../images/kaufman-triangle.svg);
+  background-size: cover;
   width: 877px;
-  height: 877px;
+  min-height: 877px;
   position: absolute;
   right: -210px;
   top: 0;
@@ -271,7 +272,7 @@
   margin: 60px auto 40px auto;
   width: 90%;
   display: flex;
-  height: 250px;
+  min-height: 250px;
   justify-content: space-between;
 }
 
@@ -290,7 +291,7 @@
 .footer__author{
   margin: 0;
   padding: 18px 0;
-  color: white;
+  color: #fff;
   line-height: 25px;
   font-size: 18px;
   font-weight: 400;
@@ -303,7 +304,7 @@
 
 .footer__column-heading{
   margin: 0;
-  color: white;
+  color: #fff;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
@@ -313,6 +314,8 @@
   display: flex;
   flex-direction: column;
   padding: 20px 0 16px 0;
+  list-style-type: none;
+  margin: 0;
 }
 
 .footer__column_content_social{
@@ -323,7 +326,7 @@
 
 .footer__column-link{
   text-decoration: none;
-  color: white;
+  color: #fff;
   line-height: 30px;
   font-size: 18px;
   font-weight: 400;
