--- a/blocks/content/feynman/__link/feynman__link.css
+++ b/blocks/content/feynman/__link/feynman__link.css
@@ -8,9 +8,10 @@
   font-size: 36px;
   font-weight: 400;
   color: #2f80ed;
+  opacity: 1;
+  transition: 0.5s ease;
 }
 
 .feynman__link:hover{
   opacity: 0.5;
-  transition: 0.5s ease;
 }
