--- a/blocks/content/khan/__buy-link/khan__buy-link.css
+++ b/blocks/content/khan/__buy-link/khan__buy-link.css
@@ -4,9 +4,10 @@
   font-weight: normal;
   text-decoration: none;
   color: #2f80ed;
+  opacity: 1;
+  transition: 0.5s ease;
 }
 
 .khan__buy-link:hover{
   opacity: 0.5;
-  transition: 0.5s ease;
 }
