--- a/blocks/content/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/content/resources/__logo-zone/resources__logo-zone.css
@@ -1,4 +1,9 @@
 .resources__logo-zone{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
   width: 1100px;
   padding: 80px 0 217px;
+  list-style-type: none;
 }
