--- a/blocks/content/resources/__logo/resources__logo.css
+++ b/blocks/content/resources/__logo/resources__logo.css
@@ -1,9 +1,10 @@
 .resources__logo{
   width: 270px;
   height: 38px;
+  opacity: 1;
+  transition: 0.5s ease;
 }
 
 .resources__logo:hover{
   opacity: 0.5;
-  transition: 0.5s;
 }
