--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -4,9 +4,10 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: 400;
+  transition: 0.5s ease;
+  opacity: 1;
 }
 
 .footer__column-link:hover{
   opacity: 0.5;
-  transition: 0.5s ease;
 }
