--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,7 +1,6 @@
 .footer__columns{
-  margin: 60px auto 40px auto;
   width: 90%;
   display: flex;
-  min-height: 250px;
   justify-content: space-between;
+  margin: 60px auto 40px;
 }
