--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,9 +1,10 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+  opacity: 1;
+  transition: 0.5s ease;
 }
 
 .header__link:hover{
   opacity: 0.5;
-  transition: 0.5s ease;
 }
