--- a/pages/index.css
+++ b/pages/index.css
@@ -43,11 +43,11 @@
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
 @import url(../blocks/rotation/rotation.css);
 @import url(../blocks/content/techniques/techniques.css);
-@import url(../blocks/content/cards/cards.css);
-@import url(../blocks/content/cards/__description/cards__description.css);
-@import url(../blocks/content/cards/__image/cards__image.css);
-@import url(../blocks/content/cards/__item/cards__item.css);
-@import url(../blocks/content/cards/__title/cards__title.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/content/video/video.css);
 @import url(../blocks/content/video/__frame/video__frame.css);
 @import url(../blocks/content/video/__frames/video__frames.css);
